[package]
name = "ntp_proxy"
version = "0.1.0"
authors = ["Finn Behrens <fin@nyantec.com>"]
edition = "2018"
license = "MirOS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
clap = { version = "2.33", features = ["color"] }
env_logger = "0.9"
log = "0.4.0"

pnet = "0.28"
afpacket = "0.1.5"
nix = "0.22"
async-std = { version = "1.9", features = [ "attributes", "unstable" ] }
